@@ -19,6 +19,9 @@ xmltooling (1.4.1-1) UNRELEASED; urgency=low
     build results.
   * Add build dependency on pkg-config, which upstream now uses to find
     the SSL libraries.
+  * Update to debhelper compatibility level V8.
+    - Use the autotools-dev debhelper module for config.{sub,guess}.
+    - Use debhelper rule minimization.
   * Update debian/copyright to the current DEP-5 specification.
 
  -- Russ Allbery <rra@debian.org>  Sun, 13 Mar 2011 17:55:12 -0700
